# Polly

./: .dockerignore  .gitignore  LICENSE.md  README.md  compose.yaml  dockerfile
backend/: Cargo.toml  polly.sqlite
backend/src/: abuse.rs  ask.rs  bin.rs  cal.rs  main.rs  pow.rs  rate_limit.rs  state.rs
backend/src/storage/: ban.rs  memory.rs  mod.rs  sqlite.rs
static/: 404.html  INFO.html  LICENSE.html  ask.css  ask.html  ask.js  bin.css  bin.html  bin.js  cal.css  cal.html  cal.js  index.css  index.html  index.js  script.js  site.webmanifest  style.css
