[package]
name = "polly-backend"
version = "0.1.0"
edition = "2021"
default-run = "polly-backend"

[dependencies]
argon2 = "0.5.3"
axum = "0.7" 
axum-extra = { version = "0.9", features = ["typed-header"] }
html-escape = "0.2.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] } 
tower-http = {version = "0.5", features = ["fs"] }
uuid = { version = "1.7", features = ["v4"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
